--- a/src/components/DeliveryForm/style.scss
+++ b/src/components/DeliveryForm/style.scss
@@ -14,7 +14,6 @@
       background: #e6e6e6;
       padding: 10px;
       display: block;
-      height: 100%;
       width: 222px;
       color: black;
       font-size: 21px;
@@ -28,7 +27,6 @@
       background: black;
       font-size: 21px;
       padding: 10px;
-      height: 100%;
       overflow: hidden;
       &.active {
         color: black;
@@ -88,6 +86,7 @@
         border: 1px solid #b2b2b2;
         padding: 9px 8px 6px;
         width: 100%;
+        box-sizing : border-box;
         height: auto;
         margin-bottom: 15px;
         border-radius: 6px;
@@ -157,6 +156,7 @@
         left: 0;
         width: 100%;
         background: white;
+        box-sizing : border-box;
         text-transform: uppercase;
         font-size: 14px;
         list-style-type: none;
@@ -223,6 +223,7 @@
       position: relative;
       text-transform: uppercase;
       border: 1px solid #b2b2b2;
+      box-sizing : border-box;
       padding: 6px 8px 3px;
       border-radius: 6px;
       font-size: 20px;
