--- a/src/components/address-component/style.scss
+++ b/src/components/address-component/style.scss
@@ -23,6 +23,7 @@
     width: 100%;
     height: auto;
     margin-bottom: 15px;
+    box-sizing : border-box;
     border-radius: 6px;
     font-size: 14px;
     &:focus{
@@ -61,6 +62,7 @@
     background: white;
     text-transform: uppercase;
     font-size: 14px;
+    box-sizing : border-box;
     list-style-type: none;
     border-radius: 0 0 6px 6px;
     border: 1px solid #ffd70f;
@@ -174,6 +176,7 @@
   position: relative;
   text-transform: uppercase;
   border: 1px solid #b2b2b2;
+  box-sizing : border-box;
   padding: 6px 8px 3px;
   border-radius: 6px;
   font-size: 20px;
