--- a/src/components/Mods/_styles.scss
+++ b/src/components/Mods/_styles.scss
@@ -1,3 +1,18 @@
+.dishmod-arrow {
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 16px;
+  left: 7%;
+  box-sizing: border-box;
+  border: 10px solid black;
+  border-color: white white transparent transparent;
+  transform-origin: 0 0;
+  transform: rotate(-45deg);
+  box-shadow: 1px -2px 2px 0 #CCC;
+  z-index: 10;
+}
+
 .dishmod {
   position: absolute;
   top: 15px;
@@ -8,25 +23,11 @@
   font-size: 14px;
   z-index: 99;
   box-shadow: 0 0 5px #CCC;
+  z-index: 1;
 
   &.right-side {
     right: 0;
     left: auto;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 0;
-    top: 0;
-    left: 7%;
-    box-sizing: border-box;
-    border: 10px solid black;
-    border-color: white white transparent transparent;
-    transform-origin: 0 0;
-    transform: rotate(-45deg);
-    box-shadow: 1px -2px 2px 0 #CCC;
   }
 
   .modal-header {
