--- a/src/components/Mods/_styles.scss
+++ b/src/components/Mods/_styles.scss
@@ -21,7 +21,7 @@
   height: 369px;
   background: white;
   font-size: 14px;
-  z-index: 99;
+  z-index: 99 !important;
   box-shadow: 0 0 5px #CCC;
   z-index: 1;
 
