--- a/src/components/Mods/_styles.scss
+++ b/src/components/Mods/_styles.scss
@@ -10,7 +10,7 @@
   transform-origin: 0 0;
   transform: rotate(-45deg);
   box-shadow: 1px -2px 2px 0 #CCC;
-  z-index: 10;
+  z-index: 99;
 }
 
 .dishmod {
@@ -21,7 +21,7 @@
   height: 369px;
   background: white;
   font-size: 14px;
-  z-index: 99 !important;
+  z-index: 98 !important;
   box-shadow: 0 0 5px #CCC;
   z-index: 1;
 
@@ -208,7 +208,7 @@
   .fade-out-block-bottom {
     position:absolute;
     margin: 0 auto 0 0;
-    transition: all .3s ease-in-out;
+    transition: all .1s linear;
     width: calc(100% - 30px);
     height: 50px;
     opacity: 1;
