--- a/src/components/Dish/_styles.scss
+++ b/src/components/Dish/_styles.scss
@@ -1,3 +1,22 @@
+.dish.from-cart {
+  flex-direction: column-reverse;
+}
+.dish.from-cart {
+  width: 19%;
+  margin-right: 1%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
+  &:nth-child(5n) {
+    margin-right: 0;
+  }
+
+  .dish-info__variants {
+    
+  }
+}
+
 .dish {
   display: flex;
   flex-wrap: nowrap;
