--- a/src/components/CartList/_styles.scss
+++ b/src/components/CartList/_styles.scss
@@ -1,4 +1,8 @@
-#cart {
+#cart{
+  width: 72vw;
+  padding: 0 14vw;
+  margin: 0;
+
   .cart-head {
     display: flex;
     justify-content: space-between;
@@ -78,6 +82,10 @@
   .additional-with-order {
     width: 40%;
     position: relative;
+
+    .include-mods {
+      position: relative;
+    }
 
     .dish-sum {
       position: absolute;
@@ -281,42 +289,33 @@
     justify-content: flex-start;
     max-height: 6.5rem;
     overflow: hidden;
-    .i-item {
-      margin: 0 5px 0 0;
-      display: inline;
+    
+    span {
+      color: #808080;
+      font-size: 1.25rem;
+      margin-right: 0.35rem;
 
-      .mod-name {
-        font-size: 1.1rem;
-        color: #808080;
+      button {
+        position: relative;
+        background: none;
+        box-shadow: none;
+        border: none;
+        outline: none;
+        width: 0.5rem;
+        font-size: 1.25rem;
+        line-height: 0;
+        right: 0.1rem;
+        user-select: none;
+        cursor: pointer;
       }
 
-      .mod-name-deleted {
+      &.excluded {
         text-decoration: line-through;
-      }
 
-      .mod-delete-icon {
-        color: black;
-        background: url("img/icons_close_min.png") center no-repeat;
-        background-size: contain; 
-        cursor: pointer;
-        width: 9px;
-        height: 9px;
-        display: inline-block;
-        margin: 0 0 0 2px;
-      }
-
-      .mod-return-icon {
-        color: black;
-        cursor: pointer;
-        font-size: 17px;
-        width: 9px;
-        height: 9px;
-        display: inline-block;
-        margin: 0 0 0 2px;
-        &::before {
-          content: '+';
-          display: inline-block;
-          transform: scale(1.12);
+        button {
+          font-size: 1.5rem;
+          top: 0.2rem;
+          text-decoration: none !important;
         }
       }
     }
@@ -351,14 +350,14 @@
 
     .weight {
       color: #808080;
-      font-size: 1rem;
+      font-size: 0.9rem;
       white-space: nowrap;
     }
 
-    .counter-block {
+    .counter {
       display: flex;
 
-      .counter {
+      button {
         width: 26px;
         height: 26px;
         line-height: 1;
@@ -369,6 +368,8 @@
         text-decoration: none;
         box-shadow: none;
         cursor: pointer;
+        font-size: 1.1rem;
+        box-sizing: border-box;
 
         &:hover {
           background: #ffd70f;
@@ -376,12 +377,13 @@
         }
       }
 
-      .label-counter {
+      span {
         display: inline-block;
         margin: 0 0.5rem 0;
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         line-height: 1;
         width: 35px;
+        box-sizing: border-box;
         text-align: center;
       }
     }
@@ -394,33 +396,56 @@
   flex-wrap: nowrap;
 }
 
-.drinks {
+
+
+
+
+
+.drinks,
+.sauces {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   margin-bottom: 50px;
+  
 
-  .drink {
+  .from-cart {
     width: 19%;
-    margin-right: 1%;
+    margin: 0 1% 30px 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     overflow: hidden;
+    box-sizing: border-box;
+    justify-content: flex-start;
 
     &:nth-child(5n) {
       margin-right: 0;
     }
+    &:nth-child(odd),
+    &:nth-child(even) {
+      margin: 0 1% 30px 0;
+      flex-direction: column-reverse;
+      justify-content: flex-end;
+    }
 
-
-    .chars {
+    .dish-info {
+      width: 100%;
+      flex: 1;
+      box-sizing: border-box;
       padding: 20px 6px 10px;
-      display: flex;
+    }
+
+
+    .dish-info__techcard {
+      display: none;
+      padding: 20px 6px 10px;
       flex: 1;
       flex-direction: column;
       justify-content: space-between;
+      box-sizing: border-box;
     }
 
-    .title {
+    .dish-info__name {
       font-size: 21px;
       font-family: "Gilroy";
       text-transform: uppercase;
@@ -430,15 +455,17 @@
       max-height: 62px;
       overflow: hidden;
       margin: 0 0 20px;
+      box-sizing: border-box;
     }
 
-    .pic {
+    .dish-image {
       position: relative;
       cursor: pointer;
       display: flex;
       width: 100%;
       height: 257px;
       margin: 0;
+      box-sizing: border-box;
 
       img {
         max-width: 100%;
@@ -447,18 +474,20 @@
         align-self: center;
         justify-content: center;
         margin: 0;
+        box-sizing: border-box;
         filter: brightness(100%);
       }
     }
 
-    .sizes {
+    .dish-info__variants {
       display: flex;
       flex-wrap: nowrap;
       justify-content: space-between;
       margin: 15px 0;
       width: 100%;
+      box-sizing: border-box;
   
-      .btn {
+      button {
         text-align: center;
         display: block;
         border-radius: 18px;
@@ -467,8 +496,10 @@
         background: transparent;
         cursor: pointer;
         padding: 5px 30px;
+        white-space: nowrap;
         margin-bottom: 3px;
         margin-right: 5px;
+        box-sizing: border-box;
   
         &:last-child {
           margin-right: 0; 
@@ -484,6 +515,11 @@
   
     }
 
+    .dish-info__variant-info {
+      width: 100%;
+      justify-content: space-between;
+    }
+
 
     .bottom-row {
       display: flex;
@@ -491,6 +527,7 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      box-sizing: border-box;
       width: 100%;
     }
 
@@ -499,6 +536,7 @@
       flex-direction: row;
       flex-wrap: nowrap;
       justify-content: space-between;
+      box-sizing: border-box;
       width: 100%;
     }
 
@@ -510,24 +548,28 @@
       margin: 0 0 0 0;
       white-space: nowrap;
       justify-content: center;
+      box-sizing: border-box;
 
       span.price {
         font-size: 1.8rem;
         line-height: 1;
         margin-top: 3px;
+        box-sizing: border-box;
       }
 
       span.weight {
         font-size: 1.1rem;
         color: #b2b2b2;
         line-height: 1;
+        box-sizing: border-box;
       }
     }
 
-    .counter-block {
+    .counter {
       display: flex;
+      box-sizing: border-box;
 
-      .counter {
+      button {
         width: 26px;
         height: 26px;
         background: transparent;
@@ -536,6 +578,7 @@
         outline: none;
         text-decoration: none;
         box-shadow: none;
+        box-sizing: border-box;
         cursor: pointer;
 
         &:hover {
@@ -549,6 +592,7 @@
         margin: 2px 0.5rem 0;
         font-size: 1.8rem;
         line-height: 1;
+        box-sizing: border-box;
       }
     }
 
@@ -567,6 +611,7 @@
       padding: 9px 13px 6px;
       font-weight: 500;
       max-height: 43px;
+      box-sizing: border-box;
       cursor: pointer;
 
       &:hover {
@@ -585,6 +630,7 @@
   flex-direction: row;
   width: 100%;
   margin-bottom: 25px;
+  box-sizing: border-box;
 
   .add-delivery {
     position: relative;
@@ -599,28 +645,34 @@
     padding: 9px 25px 6px;
     margin: 0 0 10px;
     line-height: 1;
+    box-sizing: border-box;
     cursor: pointer;
   }
 
   .dp-wrapper {
     width: 30%;
+    box-sizing: border-box;
 
     label {
       width: 100%;
       text-transform: uppercase;
       font-size: 20px;
+      box-sizing: border-box;
     }
 
     .delivery-free-label {
       text-align: right;
+      box-sizing: border-box;
     }
 
   }
 
   .select-wrapper {
     position: relative;
+    box-sizing: border-box;
 
     .select {
+      box-sizing: border-box;
       border: 1px solid #b2b2b2;
       padding: 9px 8px 6px;
       width: 100%;
