--- a/src/components/Dish/_styles.scss
+++ b/src/components/Dish/_styles.scss
@@ -1,22 +1,3 @@
-.dish.from-cart {
-  flex-direction: column-reverse;
-}
-.dish.from-cart {
-  width: 19%;
-  margin-right: 1%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-
-  &:nth-child(5n) {
-    margin-right: 0;
-  }
-
-  .dish-info__variants {
-    
-  }
-}
-
 .dish {
   display: flex;
   flex-wrap: nowrap;
@@ -247,6 +228,7 @@
   &:first-child {
     left: 5%;
     top: 35%;
+    
 
     .dish-info {
       position: absolute;
@@ -257,6 +239,8 @@
     .dish-image {
       position: absolute;
       width: 50rem !important;
+      right: 0;
+      top: 0;
     }
   }
 
@@ -273,6 +257,7 @@
     .dish-image {
       position: absolute;
       top: 8%;
+      right: 0;
     }
   }
 }
